Fix spacing and nav hover colour

--- a/css/main.css
+++ b/css/main.css
@@ -3,8 +3,8 @@ html {
   font-family: Georgia, serif;
   line-height: 1.5;
 }
-img {
 
+img {
   width: 100%;
 }
 
@@ -29,7 +29,7 @@ nav ol {
 }
 
 nav a {
-  color: #b42885;
+  color: #793284;
   text-decoration: none;
 }
 
@@ -41,7 +41,7 @@ nav a:hover {
 .intro {
   font-size: 1rem;
 }
-h2 {
 
+h2 {
   font-family: "Patua One", cursive;
 }
